# cross-harness

./: README.ko.md  README.md  README.zh.md  pyproject.toml  todo.md
docs/: DESIGN.md  HLD.md  LLD.md  SRS.md  corss-harness-skll-mcp-strategy.md
src/cross_harness/: __init__.py  cli.py
src/cross_harness/broker/: __init__.py  event_store.py  idempotency.py  lock.py  runtime.py  state_manager.py
src/cross_harness/config/: loader.py  state.py
src/cross_harness/events/: models.py
src/cross_harness/workspace/: __init__.py  manager.py
tests/: test_cli_and_broker.py
